introduced cacheScheduler and cacheloader